
1.2.2b6:
    Core:
    * FIX: setup: detect check_icmp also on 64-Bit CentOS
           (thanks to あきら) 

    Checks & Agents:
    * FIX: apc_symmetra_power: resurrect garble PNP template for 
    * FIX: check_mk_agent.freebsd: remove garble from output
           (Thanks to Mathias Decker)
    * check_http: now support the option -L (urlizing the result)

    Notifications:
    * FIX: fix event type for recoveries
    * FIX: fix custom notifications on older nagios versions
    
    Livestatus:
    * FIX: memory leak when removing downtime / comment 

1.2.2b5:
    Core:
    * Checks can now omit the typical "OK - " or "WARN -". This text
      will be added automatically if missing.
    * FIX: livecheck: fixed compilation bug
    * FIX: check_mk: convert service description unicode into utf-8
    * FIX: avoid simultanous activation of changes by means of a lock
    
    Checks & Agents:
    * FIX: jolokia_metrics.mem - now able to handle negative/missing max values
    * ADD: tcp_conn_stats: now additionally uses /proc/net/tcp6
    * ADD: wmic_processs: cpucores now being considered when calculating 
           user/kernel percentages. (thanks to William Baum)
    * FIX: UPS checks support Eaton Evolution
    * FIX: windows agent plugin: mssql now exits after 10 seconds
    
    Notifications:
    * FIX: fixed crash on host notification when contact had explicit services set

    Livestatus:
    * FIX: possible crash with VERY long downtime comments

    WATO:
    * FIX: Fix hiliting of errors in Nagios output
    * FIX: localisation error

    Multisite:
    * FIX: Avoid duplicate "Services" button in host detail views
    * FIX: fix rescheduling icon for services with non-ASCII characters
    * New filter for IP address of a host 
    * Quicksearch: allow searching for complete IP addresses and IP
      address prefixes
    * Add logentry class filter to view 'Host- and Service events'

    BI: 
    * FIX: fix exception with expansion level being 'None'